@@ -861,8 +861,9 @@ DiagramAppearancePreferencePage_displayHeaderLabel = Display header
 DiagramAppearancePreferencePage_hideConnectorLabelIconsLabel =  Hide label icons on connectors
 DiagramAppearancePreferencePage_hideShapeLabelIconsLabel =  Hide label icons on shapes
 DiagramAppearancePreferencePage_labelIconsGroupText = Label icons (does not affect existing elements of opened diagrams)
-DiagramConnectionsPreferencePage_enableOverrideLabel = Enable user specifc default values. These setting apply to all diagrams (does not affect existing elements).
-DiagramConnectionsPreferencePage_showEdgeLabelLinkOnSelect = Show link between egde and its labels on selection
+DiagramAppearancePreferencePage_displayUserFixedColorsInPaletteLabel = Display viewpoint colors
+DiagramConnectionsPreferencePage_enableOverrideLabel = Enable user specific default values. These setting apply to all diagrams (does not affect existing elements).
+DiagramConnectionsPreferencePage_showEdgeLabelLinkOnSelect = Show link between edge and its labels on selection
 DiagramDialectEditorDialogFactory_forbiddenOperation = Forbidden operation
 DiagramDialectUIServices_diagramDescription = \n . {0}: diagram.DDiagram | the diagram of the current potential edge.
 DiagramDialectUIServices_diagramEditPartDeactivationError = Error while deactivating the representation, the remote server may be unreachable.
