@@ -20,12 +20,15 @@ import java.util.stream.Collectors;
 import org.eclipse.draw2d.ColorConstants;
 import org.eclipse.draw2d.FigureUtilities;
 import org.eclipse.emf.ecore.EObject;
+import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.sirius.business.api.session.Session;
+import org.eclipse.sirius.ui.business.api.preferences.SiriusUIPreferencesKeys;
 import org.eclipse.sirius.ui.tools.api.color.VisualBindingManager;
 import org.eclipse.sirius.viewpoint.RGBValues;
 import org.eclipse.sirius.viewpoint.description.SystemColors;
 import org.eclipse.sirius.viewpoint.description.UserColorsPalette;
 import org.eclipse.sirius.viewpoint.description.UserFixedColor;
+import org.eclipse.sirius.viewpoint.provider.SiriusEditPlugin;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.RGB;
 
@@ -107,23 +110,19 @@ public class ColorManager {
      * @return A map which key is the color name and the value is the RGB.
      */
     public Map<String, RGB> collectVsmAndDefaultColors(Session session) {
-        // Get user fixed colors
-        // @formatter:off
         // Get all the UserColorsPalette from every VSM resource of selected viewpoints
-        List<UserColorsPalette> palettes = session.getSelectedViewpoints(true).stream()
-                .map(EObject::eContainer)
-                .map(org.eclipse.sirius.viewpoint.description.Group.class::cast)
-                .flatMap(group -> group.getUserColorsPalettes().stream()).collect(Collectors.toList());
+        Map<String, RGB> vsmColors = new LinkedHashMap<>();
+        final IPreferenceStore preferenceStore = SiriusEditPlugin.getPlugin().getPreferenceStore();
+        if (preferenceStore != null && preferenceStore.getBoolean(SiriusUIPreferencesKeys.PREF_DISPLAY_VSM_USER_FIXED_COLOR_IN_PALETTE.name())) {
+            List<UserColorsPalette> palettes = session.getSelectedViewpoints(true).stream().map(EObject::eContainer).map(org.eclipse.sirius.viewpoint.description.Group.class::cast)
+                    .flatMap(group -> group.getUserColorsPalettes().stream()).collect(Collectors.toList());
 
-        Map<String, RGB> vsmColors = palettes.stream()
-                .flatMap(palette -> palette.getEntries().stream())
-                .filter(UserFixedColor.class::isInstance)
-                .map(UserFixedColor.class::cast)
-                .collect(Collectors.toMap(c -> c.getName(), c -> new RGB(c.getRed(), c.getGreen(), c.getBlue()), (rgb1, rgb2) -> {
-                    // in a case of collision of key we keep the first value
-                    return rgb1;
-                }, () -> new LinkedHashMap<String, RGB>()));
-        // @formatter:on
+            vsmColors = palettes.stream().flatMap(palette -> palette.getEntries().stream()).filter(UserFixedColor.class::isInstance).map(UserFixedColor.class::cast)
+                    .collect(Collectors.toMap(c -> c.getName(), c -> new RGB(c.getRed(), c.getGreen(), c.getBlue()), (rgb1, rgb2) -> {
+                        // in a case of collision of key we keep the first value
+                        return rgb1;
+                    }, () -> new LinkedHashMap<String, RGB>()));
+        }
 
         // get system colors
         Map<String, RGB> systemColors = VisualBindingManager.getDefault().getSystemPalette();
