@@ -438,6 +438,7 @@ InvalidModelingProjectMarkerUpdaterJob_updateMarkers = Update Markers
 _Pref_RefreshOnRepresentationOpening = true
 _Pref_AutoRefresh = true
 _Pref_EmptyAirdFragmentOnControl = false
+_Pref_DisplayUserVsmColorInPalette = true
 
 _Pref_ReactToPermissionIssuesByDisplayingPopup = true
 _Pref_DisplayPermissionIssuesThroughDialog = false
